tests/ui/lint/snapshots/fix_collapsible_match.snap
---
source: tests/ui/lint/fixes.rs
---
enum Inner { Ok(int), Bad }
enum Outer { Some(Inner), None }

pub fn f(o: Outer) -> int {
  match o {
    Outer.Some(x) => match x {
      Inner.Ok(y) => y,
      _ => 0,
    },
    _ => 0,
  }
}
=== fixed ===
enum Inner { Ok(int), Bad }
enum Outer { Some(Inner), None }

pub fn f(o: Outer) -> int {
  match o {
    Outer.Some(Inner.Ok(y)) => y,
    _ => 0,
  }
}
