tests/ui/lint/snapshots/fix_double_bool_negation_with_parens.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let x = true;
  let _ = !(!x)
}
=== fixed ===
fn main() {
  let x = true;
  let _ = x
}
